manifests/syncthing/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  selector:
    app: syncthing
  type: LoadBalancer
  loadBalancerIP: 10.0.100.244
  ports:
    - name: webui
      protocol: TCP
      port: 8384
      targetPort: webui
    - name: filetransfer
      protocol: TCP
      port: 22000
      targetPort: filetransfer
    - name: quic
      protocol: UDP
      port: 22000
      targetPort: quic
    - name: discovery
      protocol: UDP
      port: 21027
      targetPort: discovery
