manifests/syncthing/base/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: syncthing
  labels:
    gateway: private
    app: syncthing
spec:
  hostnames:
    - syncthing.lan.stamx.nl
  parentRefs:
    - name: private
      namespace: gateway-private
      sectionName: http
  rules:
    - backendRefs:
        - name: syncthing
          port: 8384
