manifests/syncthing/base/manifest.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
        - name: syncthing
          image: docker.io/syncthing/syncthing:latest
          imagePullPolicy: Always
          ports:
            - name: webui
              containerPort: 8384
              protocol: TCP
            - name: filetransfer
              containerPort: 22000
              protocol: TCP
            - name: quic
              containerPort: 22000
              protocol: UDP
            - name: discovery
              containerPort: 21027
              protocol: UDP
          livenessProbe:
            httpGet:
              path: /rest/noauth/health
              port: 8384
            initialDelaySeconds: 60
            periodSeconds: 60
          readinessProbe:
            httpGet:
              path: /rest/noauth/health
              port: 8384
            initialDelaySeconds: 10
            periodSeconds: 30
          resources: {}
          volumeMounts:
            - mountPath: /var/syncthing
              name: config
            - mountPath: /var/shared
              name: data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: pvc-iscsi-syncthing-config
        - name: data
          persistentVolumeClaim:
            claimName: pvc-nfs-syncthing-data

---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  selector:
    app: syncthing
  type: LoadBalancer
  loadBalancerIP: 10.0.100.244
  ports:
    - name: webui
      protocol: TCP
      port: 8384
      targetPort: webui
    - name: filetransfer
      protocol: TCP
      port: 22000
      targetPort: filetransfer
    - name: quic
      protocol: UDP
      port: 22000
      targetPort: quic
    - name: discovery
      protocol: UDP
      port: 21027
      targetPort: discovery

---
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: syncthing
  labels:
    app: syncthing
spec:
  ingressClassName: nginx-private
  rules:
    - host: syncthing.lan.stamx.nl
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: syncthing
                port:
                  name: webui
